Bug 46918, 3490. Clean up inline margin handling. r=rbs, sr=kin